fix style component in dark mode

--- a/src/index.scss
+++ b/src/index.scss
@@ -178,7 +178,7 @@ body {
 }
 
 .tableTW > :not(caption) > * > * {
-  padding: 1rem 0.5rem;
+  padding: 1rem 1.5rem;
   background-color: transparent;
   border-bottom-width: 1px;
   box-shadow: inset 0 0 0 9999px transparent;
